# DAV

./: DSCO Lab Manual 2025.docx  Week1 Demo.ipynb  Week_3_NumPy_basics_and_vectorised_computation (1).ipynb  q3.c
DISL/: q2.c
DISL Lab/Lab 0/: example1.v  example1_tb.v  example1_tb.vcd  example1_tb.vvp
DISL/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
DISL/lab1/: a.out  example.vvp
DISL/log/: latest_build
LAB4/: LAB4.depend  main  main.c  q1.c
LAB7/: q1  q1.c  q2  q2.c  q3  q3.c
NumPy/: Class_1.ipynb
SET 4/: DATA VISUALIZATION.docx  DSE 1271 SET 4- Transaction Data.docx  week9.ipynb
Week 3/: Week3_demo.ipynb  Week_3_lab.ipynb
Week 3 demo/: Demo.ipynb  squarematrix.ipynb
Week 4/: Week4_Lab.ipynb  Week4demo.ipynb  mydata.sqlite
Week 5/: HindiMovies.csv  Movies_lab.csv  Week5_Demo.ipynb  Week5_lab.ipynb
Week 6/: Untitled.ipynb  Week 6, Exercise 2 Questions - Cereal Dataset.docx  week6_cars.ipynb  week6_cerials.ipynb  week6_demo.ipynb
Week 6/Week 6/: Demo_cerials.ipynb  demo_cerial_pc_66.ipynb  week6_cerials.ipynb
Week 7/: Untitled.ipynb  Week 7 Matplotlib Tutorial.ipynb  Week 7, Exercise 2 Questions - Matches Dataset.docx  Week7demo.ipynb  Week7lab.ipynb
Week 8/: Demo9.ipynb  LAB9.ipynb  Week 8 Advanced Visualization.ipynb  week8.ipynb  week_8_lab.ipynb
Week 8/week 10/: Untitled.ipynb
Week1/: demo_week_1.ipynb  pro1.ipynb  pro1_class.ipynb  pro2.ipynb  pro3.ipynb  pro4.ipynb  pro5.ipynb  week1_LAB.ipynb
Week2/: Demo_Dict.ipynb  Demo_Week_2.ipynb  Untitled.ipynb  pro1.ipynb  pro2.ipynb  pro3.ipynb  week_2_LAB.ipynb
Week8/: Advanced_vis.ipynb
aiml_b/: Readme.md  a.out  hellow.v
aiml_b/lab0/: and_gate.v  ex_tb.v  example.v
aiml_b/lab4/: BCD_checker.v  comparator.v  comparator_tb.v  comparator_tb.vcd  comparator_tb.vvp  four_bit.v  four_bit.vcd  four_bit_tb.v  four_bit_tb.vvp  full_adder.v  full_adder.vcd  full_adder.vvp  full_adder_tb.v  full_adder_tb.vvp  (+5 more)
command_vel/: CMakeLists.txt  package.xml
examples/: ex1.csv.xlsx
lab1/: ex_tb.vcd
navigation_cpp/: CMakeLists.txt  package.xml
navigation_cpp/src/: Astar.cpp  navigation.cpp
(+161 files in other folders)
